# sistemundigitalkelabkkqsmkdd1

./: .gitignore  Dockerfile  README.md  config.py  pyproject.toml  run.py
app/: __init__.py  admin_routes.py  calon_routes.py  laporan_routes.py  models.py  pengundi_routes.py  routes.py
app/static/: borang.css  button.css  menu.css  senarai.css
app/templates/: admin_navbar.html  base.html  import.html  index.html  login.html  navbar.html  pengundi_navbar.html  signup.html
app/templates/admin/: admin_insert.html  admin_senarai.html  admin_update.html
app/templates/calon/: calon_insert.html  calon_profil.html  calon_senarai.html  calon_update.html
app/templates/laporan/: laporan_cetak.html  laporan_pilih.html
app/templates/pengundi/: pengundi_carian.html  pengundi_insert.html  pengundi_maklumat.html  pengundi_senarai.html  pengundi_update.html
app/utils/: cloudinary_helper.py
migrations/versions/: 87742c052f33_create_admin_calon_pengundi_tables.py  cfed696f69d7_add_gambar_public_id_to_calon.py
